# roboteam-door-tracker

./: .devcontainer.json  .envrc  .gitignore  README.md  compose.yaml  devenv.nix  devenv.yaml  pyproject.toml  python.nix  schema.puml  treefmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/s6/nix-daemon/: run
.github/workflows/: test.yaml
docs/: scanner-api-response-schema.json  scanner-api.yaml  schema.puml
door_tracker/: manage.py  pyproject.toml
door_tracker/door_tracker/: asgi.py  settings.py  urls.py  wsgi.py
door_tracker/door_tracker/static/: admin_custom.css
door_tracker/templates/admin/: base_site.html  index.html
door_tracker/webui/: admin.py  models.py  urls.py  utils.py  views.py
door_tracker/webui/migrations/: 0001_initial.py  0002_remove_person_subteam_id.py  0003_person_subteam_id_delete_membership.py  0004_job_remove_log_tag_id_remove_person_subteam_id_and_more.py  0005_alter_person_options_alter_subteam_options.py  0006_alter_tag_name_alter_tag_owner.py  0007_alter_tag_owner_alter_membership_person_and_more.py  0008_alter_log_time_statistics.py  0009_statistics_average_week_statistics_total_minutes.py  0010_alter_tag_tag.py  0011_scanner_log_scanner.py  0012_alter_log_type.py
door_tracker/webui/templates/webui/: index.html  login.html  logs.html  sign_up.html  statistics.html  user_profile.html  user_statistics.html
