[project]
name = "roboteam-door-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "daphne>=4.2.1",
  "django>=5.2.5",
  "dj-database-url>=3.0.1",
  "whitenoise[brotli]>=6.9.0",
  "django-dbbackup>=5.0.0",
]

[dependency-groups]
dev = ["python-lsp-server[all]>=1.13.1"]

[tool.setuptools.packages.find]
include = ['*']
